terraform/environment/region/viewer_ecs.tf
//----------------------------------
// Viewer ECS Service level config

resource "aws_ecs_service" "viewer" {
  name             = "viewer-service"
  cluster          = aws_ecs_cluster.use_an_lpa.id
  task_definition  = aws_ecs_task_definition.viewer.arn
  desired_count    = local.view_desired_count
  platform_version = "1.4.0"

  network_configuration {
    security_groups  = [aws_security_group.viewer_ecs_service.id]
    subnets          = data.aws_subnet.application[*].id
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.viewer.arn
    container_name   = "web"
    container_port   = 8080
  }

  capacity_provider_strategy {
    capacity_provider = var.capacity_provider
    weight            = 100
  }

  deployment_circuit_breaker {
    enable   = false
    rollback = false
  }

  deployment_controller {
    type = "ECS"
  }

  wait_for_steady_state = true

  lifecycle {
    create_before_destroy = true
    ignore_changes = [
      desired_count
    ]
  }

  timeouts {
    create = "7m"
    update = "4m"
  }

  provider = aws.region
}

//----------------------------------
// The service's Security Groups

resource "aws_security_group" "viewer_ecs_service" {
  name_prefix = "${var.environment_name}-viewer-ecs-service"
  description = "Use service security group"
  vpc_id      = data.aws_vpc.main.id
  lifecycle {
    create_before_destroy = true
  }

  provider = aws.region
}

// 8080 in from the ELB
resource "aws_security_group_rule" "viewer_ecs_service_ingress" {
  description              = "Allow Port 8080 ingress from the application load balancer"
  type                     = "ingress"
  from_port                = 8080
  to_port                  = 8080
  protocol                 = "tcp"
  security_group_id        = aws_security_group.viewer_ecs_service.id
  source_security_group_id = var.shared_load_balancers_enabled ? tolist(data.aws_lb.shared_viewer[0].security_groups)[0] : aws_security_group.viewer_loadbalancer[0].id
  lifecycle {
    create_before_destroy = true
  }

  provider = aws.region
}

// Anything out
resource "aws_security_group_rule" "viewer_ecs_service_egress" {
  description       = "Allow any egress from Use service"
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.viewer_ecs_service.id
  lifecycle {
    create_before_destroy = true
  }

  provider = aws.region
}

resource "aws_security_group_rule" "viewer_ecs_service_elasticache_ingress" {
  description              = "Allow elasticache ingress for Use service"
  type                     = "ingress"
  from_port                = 0
  to_port                  = 6379
  protocol                 = "tcp"
  security_group_id        = data.aws_security_group.brute_force_cache_service.id
  source_security_group_id = aws_security_group.viewer_ecs_service.id
  lifecycle {
    create_before_destroy = true
  }

  provider = aws.region
}

//--------------------------------------
// Viewer ECS Service Task level config

resource "aws_ecs_task_definition" "viewer" {
  family                   = "${var.environment_name}-viewer"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = 256
  memory                   = 512
  container_definitions    = "[${local.viewer_web}, ${local.viewer_app} ${var.feature_flags.deploy_opentelemetry_sidecar ? ", ${local.viewer_aws_otel_collector}" : ""}]"
  task_role_arn            = var.ecs_task_roles.viewer_task_role.arn
  execution_role_arn       = var.ecs_execution_role.arn

  provider = aws.region
}

//----------------
// Permissions

resource "aws_iam_role_policy" "viewer_permissions_role" {
  name   = "${var.environment_name}-${local.policy_region_prefix}-ViewerApplicationPermissions"
  policy = data.aws_iam_policy_document.viewer_permissions_role.json
  role   = var.ecs_task_roles.viewer_task_role.id

  provider = aws.region
}

/*
  Defines permissions that the application running within the task has.
*/
data "aws_iam_policy_document" "viewer_permissions_role" {
  statement {
    sid    = "${local.policy_region_prefix}XRayPermissions"
    effect = "Allow"

    actions = [
      "xray:PutTraceSegments",
      "xray:PutTelemetryRecords",
      "xray:GetSamplingRules",
      "xray:GetSamplingTargets",
      "xray:GetSamplingStatisticSummaries",
    ]

    resources = ["*"]
  }

  statement {
    sid    = "${local.policy_region_prefix}KMSPermissions"
    effect = "Allow"

    actions = [
      "kms:Decrypt",
      "kms:GenerateDataKey",
    ]

    resources = [data.aws_kms_alias.sessions_viewer.target_key_arn]
  }

  provider = aws.region
}

//-----------------------------------------------
// Viewer ECS Service Task Container level config

locals {
  viewer_web = jsonencode(
    {
      cpu         = 1,
      essential   = true,
      image       = "${data.aws_ecr_repository.use_an_lpa_front_web.repository_url}@${data.aws_ecr_image.use_an_lpa_front_web.image_digest}",
      mountPoints = [],
      name        = "web",
      user        = "nginx",
      privileged  = false,
      portMappings = [
        {
          containerPort = 8080,
          hostPort      = 8080,
          protocol      = "tcp"
        }
      ],
      volumesFrom = [],
      logConfiguration = {
        logDriver = "awslogs",
        options = {
          awslogs-group         = aws_cloudwatch_log_group.application_logs.name,
          awslogs-region        = var.region_name,
          awslogs-stream-prefix = "${var.environment_name}.viewer-web.use-an-lpa"
        }
      },
      environment = [
        {
          name  = "WEB_DOMAIN",
          value = "https://${local.route53_fqdns.public_facing_view}"
        },
        {
          name  = "APP_HOST",
          value = "127.0.0.1"
        },
        {
          name  = "APP_PORT",
          value = "9000"
        },
        {
          name  = "TIMEOUT",
          value = "60"
        },
        {
          name  = "CONTAINER_VERSION",
          value = var.container_version
      }]
  })

  viewer_aws_otel_collector = jsonencode(
    {
      cpu         = 0,
      essential   = true,
      image       = "${data.aws_ecr_repository.otel_collector.repository_url}@${data.aws_ecr_image.otel_collector.image_digest}",
      mountPoints = [],
      name        = "aws-otel-collector",
      command = [
        "--config=/etc/ecs/ecs-default-config.yaml"
      ],
      portMappings = [],
      volumesFrom  = [],
      logConfiguration = {
        logDriver = "awslogs",
        options = {
          awslogs-group         = aws_cloudwatch_log_group.application_logs.name,
          awslogs-region        = var.region_name,
          awslogs-stream-prefix = "${var.environment_name}.viewer-otel.use-an-lpa"
        }
      },
      environment = []
  })

  viewer_app = jsonencode(
    {
      cpu         = 1,
      essential   = true,
      image       = "${data.aws_ecr_repository.use_an_lpa_front_app.repository_url}@${data.aws_ecr_image.use_an_lpa_front_app.image_digest}",
      mountPoints = [],
      name        = "app",
      user        = "www-data",
      privileged  = false,
      portMappings = [
        {
          containerPort = 9000,
          hostPort      = 9000,
          protocol      = "tcp"
        }
      ],
      healthCheck = {
        command     = ["CMD", "/usr/local/bin/health-check.sh"],
        startPeriod = 90,
        interval    = 10,
        timeout     = 30,
        retries     = 3
      },
      volumesFrom = [],
      logConfiguration = {
        logDriver = "awslogs",
        options = {
          awslogs-group         = aws_cloudwatch_log_group.application_logs.name,
          awslogs-region        = var.region_name,
          awslogs-stream-prefix = "${var.environment_name}.viewer-app.use-an-lpa"
        }
      },
      environment = local.viewer_app_environment_variables
    }
  )


  viewer_app_environment_variables = concat(
    [
      {
        name  = "CONTEXT",
        value = "viewer"
      },
      {
        name  = "KMS_SESSION_CMK_ALIAS",
        value = data.aws_kms_alias.sessions_viewer.name
      },
      {
        name  = "CONTAINER_VERSION",
        value = var.container_version
      },
      {
        name  = "API_SERVICE_URL",
        value = "http://${local.api_service_fqdn}:8080"
      },
      {
        name  = "PDF_SERVICE_URL",
        value = "http://${local.pdf_service_fqdn}:8000"
      },
      {
        name  = "SESSION_EXPIRES",
        value = tostring(var.session_expires_view)
      },
      {
        name  = "COOKIE_EXPIRES",
        value = tostring(var.cookie_expires_view)
      },
      {
        name  = "GOOGLE_ANALYTICS_ID",
        value = var.google_analytics_id_view
      },
      {
        name  = "LOGGING_LEVEL",
        value = tostring(var.logging_level)
      },
      {
        name  = "BRUTE_FORCE_CACHE_URL",
        value = "tls://${data.aws_elasticache_replication_group.brute_force_cache_replication_group.primary_endpoint_address}"
      },
      {
        name  = "BRUTE_FORCE_CACHE_PORT",
        value = tostring(data.aws_elasticache_replication_group.brute_force_cache_replication_group.port)
      },
      {
        name  = "BRUTE_FORCE_CACHE_TIMEOUT",
        value = "60"
      },
      {
        name  = "CSP_ENFORCE",
        value = tostring(var.csp_enforce)
      },
      {
        name  = "CSP_REPORT_URI",
        value = "https://${local.route53_fqdns.public_facing_view}"
      },
      {
        name  = "CSP_IAP_DOMAIN",
        value = tostring(var.csp_iap_domain)
      },
      {
        name  = "SUPPORT_DATASTORE_LPAS",
        value = tostring(var.feature_flags.support_datastore_lpas)
      },
      {
        name  = "PAPER_VERIFICATION",
        value = tostring(var.feature_flags.paper_verification)
      },
      {
        name  = "OTEL_SERVICE_NAME",
        value = "${var.environment_name}-viewer"
      },
      {
        name  = "OTEL_TRACES_EXPORTER",
        value = var.feature_flags.deploy_opentelemetry_sidecar ? "otlp" : "none"
      },
      {
        name  = "OTEL_EXPORTER_OTLP_ENDPOINT",
        value = "http://127.0.0.1:4318"
      },
    ],
  )
}
